Fixed layout of private content on mobile.

--- a/templates/css/app.styl
+++ b/templates/css/app.styl
@@ -83,6 +83,15 @@ h2.logo
 			margin-left -158px
 		.navbar-toggle
 			margin 0 10px
+	.row
+		.private
+			margin-left 0
+			padding-left 15px
+			padding-top 40px
+			.private--vertical-bar
+				width 100%
+				height 30px
+
 
 nav.navbar .nav.navbar-nav > li > a > .glyphicon
 	font-size 12px
